<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/launch"
    tools:context=".ui.login.LoginActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="176dp"
        android:background="@android:color/transparent">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_marginTop="40dp"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed"

            app:layout_scrollInterpolator="@android:anim/decelerate_interpolator"
            app:toolbarId="@+id/toolbar">

            <ImageView
                android:id="@+id/app_bar_image"
                android:layout_width="272dp"
                android:layout_height="40dp"
                android:layout_gravity="center"

                android:scaleType="fitCenter"
                android:src="@drawable/tabgads"
                app:layout_collapseMode="parallax" />

            <ImageButton
                android:id="@+id/back_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:backgroundTint="#00FFFFFF"
                app:srcCompat="@drawable/abc_vector_test" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:gravity="center|center_vertical"
            android:text="Project Submission"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="#FFB74D"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="408dp"
            android:layout_height="34dp"
            android:layout_gravity="center|center_vertical"
            android:layout_marginTop="3dp"
            android:scaleType="center"
            app:srcCompat="@drawable/untitled_1" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="451dp"


        android:layout_marginTop="10dp"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="50dp"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            tools:context=".ui.login.LoginActivity">

            <EditText
                android:id="@+id/first_name"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/form_rounded_corners"
                android:hint="@string/firstname"
                android:inputType="textEmailAddress"
                android:paddingLeft="8dp"
                android:selectAllOnFocus="true"
                android:textColor="@android:color/background_dark"
                android:textColorHint="@color/colorPrimaryDark"
                android:textColorLink="#000000"
                android:textCursorDrawable="@android:drawable/status_bar_item_background"
                android:textIsSelectable="true"
                app:layout_constraintEnd_toStartOf="@+id/last_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/project_link"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_marginTop="180dp"
                android:layout_marginBottom="24dp"
                android:background="@drawable/form_rounded_corners"
                android:hint="@string/project_on_github_link"
                android:inputType="textEmailAddress"
                android:paddingLeft="8dp"
                android:selectAllOnFocus="true"
                android:textColor="@android:color/background_dark"
                android:textColorHint="@color/colorPrimaryDark"
                android:textCursorDrawable="@android:drawable/status_bar_item_background"
                app:layout_constraintBottom_toTopOf="@+id/submit"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/email"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:background="@drawable/form_rounded_corners"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:paddingLeft="8dp"
                android:selectAllOnFocus="true"
                android:textColor="@android:color/background_dark"
                android:textColorHint="@color/colorPrimaryDark"
                android:textCursorDrawable="@android:drawable/status_bar_item_background"
                app:layout_constraintBottom_toTopOf="@+id/project_link"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/last_name" />

            <EditText
                android:id="@+id/last_name"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:background="@drawable/form_rounded_corners"
                android:hint="@string/lastname"
                android:inputType="textEmailAddress"
                android:paddingLeft="8dp"
                android:selectAllOnFocus="true"
                android:textColor="@android:color/background_dark"
                android:textColorHint="@color/colorPrimaryDark"
                android:textCursorDrawable="@android:drawable/status_bar_item_background"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/first_name"
                app:layout_constraintTop_toTopOf="parent" />


            <Button
                android:id="@+id/submit"
                android:layout_width="120dp"
                android:layout_height="35dp"
                android:layout_gravity="start"
                android:layout_marginStart="48dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="48dp"
                android:layout_marginBottom="64dp"
                android:background="@drawable/gradient_rounded_corners"
                android:enabled="false"
                android:text="@string/submit"
                android:textColor="@color/cardview_light_background"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/project_link"
                app:layout_constraintVertical_bias="0.2" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>